# sqlalchemy_course

./: pyproject.toml
src/: schemas.py
src/queries/: orm.py
src2/: config.py  database.py  main.py  models.py
src2/queries/: core.py  orm.py
